fixed refresh issue for scores and increased font size for signup

--- a/client/megafanz/src/pages/reset/reset.html
+++ b/client/megafanz/src/pages/reset/reset.html
@@ -23,7 +23,7 @@
           </p>
       </ion-item>
 			<ion-item>
-				<ion-label stacked color="primary">Email</ion-label>
+				<ion-label stacked color="primary" style="font-size: larger">Email</ion-label>
 				<ion-input formControlName="email" type="text" spellcheck="false" autocapitalize="off">
 				</ion-input>
       </ion-item>
