--- a/client/megafanz/src/pages/signup/signup.html
+++ b/client/megafanz/src/pages/signup/signup.html
@@ -22,7 +22,7 @@
       </ion-item>
 
       <ion-item>
-        <ion-label stacked color="primary">First name</ion-label>
+        <ion-label stacked color="primary" style="font-size: larger">First name</ion-label>
         <ion-input formControlName="firstName" type="text">
         </ion-input>
       </ion-item>
@@ -31,7 +31,7 @@
       </p>
 
       <ion-item>
-        <ion-label stacked color="primary">Last name</ion-label>
+        <ion-label stacked color="primary" style="font-size: larger">Last name</ion-label>
         <ion-input formControlName="lastName" type="text">
         </ion-input>
       </ion-item>
@@ -40,7 +40,7 @@
       </p>
 
       <ion-item>
-        <ion-label stacked color="primary">Email</ion-label>
+        <ion-label stacked color="primary" style="font-size: larger">Email</ion-label>
         <ion-input formControlName="username" type="text" spellcheck="false" autocapitalize="off">
         </ion-input>
       </ion-item>
@@ -49,7 +49,7 @@
       </p>
 
       <ion-item>
-        <ion-label stacked color="primary">Password</ion-label>
+        <ion-label stacked color="primary" style="font-size: larger">Password</ion-label>
         <ion-input formControlName="password" type="password" (ionFocus)="signupPage.error = '';">
         </ion-input>
       </ion-item>
@@ -60,7 +60,7 @@
         Password not strong enough.
       </p>
       <ion-item>
-        <ion-label stacked color="primary">Confirm Password</ion-label>
+        <ion-label stacked color="primary" style="font-size: larger">Confirm Password</ion-label>
         <ion-input formControlName="password2" type="password">
         </ion-input>
       </ion-item>
