Fixed formatting and deployment issues

--- a/client/megafanz/src/pages/reset/reset.html
+++ b/client/megafanz/src/pages/reset/reset.html
@@ -13,7 +13,7 @@
     </h2>
   </div>
     <p ion-text color="dark" >
-        Please enter your email address.
+      &nbsp;&nbsp;Please enter your email address.
     </p>
   	<form [formGroup]="resetForm" novalidate>
 		<ion-list>
