--- a/client/megafanz/src/index.html
+++ b/client/megafanz/src/index.html
@@ -14,7 +14,7 @@
   <!-- cordova.js required for cordova apps -->
   <script src="cordova.js"></script>
 
-  <!-- un-comment this code to enable service worker -->
+  <!-- un-comment this code to enable service worker 
   <script>
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
@@ -22,7 +22,7 @@
         .catch(err => console.error('Error', err));
     }
   </script>
- 
+ -->
   <link href="build/main.css" rel="stylesheet">
 
 </head>
